--- a/dockerfile.txt
+++ b/dockerfile.txt
@@ -2,7 +2,7 @@
 FROM openjdk:11-jre-slim
 
 # Set the working directory in the container
-C:/Aishwarya/Project/auth-service /app
+WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 COPY target/auth-service-0.0.1-SNAPSHOT.jar /app/auth-service.jar
